remove menu items; set global drawer-width value to serve the appbar drawer

--- a/client/src/components/layout/_Appbar.scss
+++ b/client/src/components/layout/_Appbar.scss
@@ -63,12 +63,10 @@
 	}
 }
 
-#root .appbar {
-	.appbar--drawer {
-		width: var(--drawer-width, 48px);
-		flex-shrink: 0;
-		font-size: 1.25rem;
-	}
+.appbar--drawer {
+	min-width: var(--drawer-width, 200px);
+	flex-shrink: 0;
+	font-size: 1.25rem;
 }
 
 #root .appbar {
