removed default vh units at it caused a crash

--- a/client/src/components/sections/realtime/Classroom/_classroom.scss
+++ b/client/src/components/sections/realtime/Classroom/_classroom.scss
@@ -7,8 +7,8 @@
 .clients__container {
 	// background-color: var(--primary);
 	display: flex;
-	min-height: calc(33.33 * var(--vh, vh));
-	max-height: calc(100 * var(--vh, vh));
+	min-height: calc(33.33 * var(--vh));
+	max-height: calc(100 * var(--vh));
 }
 
 .teachers {
