add swiper to classroom to nav between slides

--- a/client/src/styles/quiz.scss
+++ b/client/src/styles/quiz.scss
@@ -15,6 +15,12 @@
 	justify-items: flex-end;
 	overflow: hidden;
 
+	background: linear-gradient(
+		360deg,
+		var(--color-canvas),
+		var(--color-white)
+	);
+
 	.progress-bar {
 		z-index: 1000;
 	}
