--- a/client/src/components/sections/realtime/Classroom/_classroom.scss
+++ b/client/src/components/sections/realtime/Classroom/_classroom.scss
@@ -4,6 +4,10 @@
 	font-size: 1rem;
 }
 
+.views {
+	height: 100%;
+}
+
 .clients__container {
 	// background-color: var(--primary);
 	display: flex;
