--- a/client/src/components/PieChart/_PieChart.scss
+++ b/client/src/components/PieChart/_PieChart.scss
@@ -7,6 +7,7 @@
 #root .PieChart {
 	svg {
 		transition: all 0.2s ease-in-out;
+		opacity: 1;
 		// overflow: visible;
 		padding: calc(2 * var(--spacing));
 		// background-color: var(--white);
@@ -51,13 +52,13 @@
 	&.active.showHoverAnimation {
 		svg * {
 			//background element
-			&:nth-child(1) {
-				opacity: 0.95;
-			}
+			// &:nth-child(1) {
+			// 	opacity: 0.95;
+			// }
 
-			&:hover:not(*:nth-child(1)) {
-				opacity: 0.85;
-			}
+			// &:hover:not(*:nth-child(1)) {
+			// 	opacity: 0.85;
+			// }
 
 			//assuming  startAngle={180},
 			//top
@@ -94,6 +95,7 @@
 					opacity: 0;
 					display: none;
 				}
+
 				opacity: 0.2;
 				// opacity: 0;
 			}
