--- a/client/src/components/SpeedDial/SpeedDial.scss
+++ b/client/src/components/SpeedDial/SpeedDial.scss
@@ -1,3 +1,77 @@
 .MuiFab-primary {
-	background: linear-gradient(75deg, var(--secondary), var(--primary));
+	// todo: change the following to be global and be set dyanmically
+	----user--color---secondary: var(--secondary);
+	--user--color---primary: var(--primary);
+
+	background: linear-gradient(
+		75deg,
+		var(----user--color---secondary),
+		var(--user--color---primary)
+	);
+}
+
+.SpeedDialAction {
+	&,
+	.MuiFab-label {
+		transition: all 0.1s;
+	}
+
+	&:not(.selected) {
+		&:hover {
+			.MuiFab-label {
+				transition: all 0.1s;
+			}
+
+			background: linear-gradient(
+				75deg,
+				var(--secondary),
+				var(--primary)
+			);
+		}
+	}
+
+	&.selected {
+		transform: scale(3) translateX(-50%) translateY(-50%);
+
+		z-index: 30;
+
+		animation: drawAttention 2.25s 1;
+		animation-delay: 0s;
+		animation-fill-mode: forwards;
+	}
+
+	&.selected {
+		// transform: scale(3) translateX(-50%) translateY(-50%);
+
+		z-index: 30;
+	}
+}
+
+@keyframes drawAttention {
+	0% {
+		transform: scale3d(0.3, 0.3, 0.3) rotate(5deg) skewX(0deg) skewY(20deg);
+		opacity: 1;
+		color: black;
+		background-color: var(--secondary);
+	}
+
+	15% {
+		background-color: var(--primary);
+		// transform: scale3d(2, 0.3, 0.3) rotate(5deg) skewX(0deg) skewY(20deg);
+
+		transform: scale(3) translateX(-50%) translateY(-50%);
+	}
+
+	55% {
+		background-color: var(--primary);
+	}
+
+	90% {
+		transform: scale(3) translateX(-50%) translateY(-50%);
+		background-color: var(--primary);
+	}
+
+	100% {
+		transform: scale3d(1, 1, 1) rotate(0deg) skewX(0deg) skewY(0deg);
+	}
 }
