--- a/client/src/components/RealtimeManager/_RealtimeManager.scss
+++ b/client/src/components/RealtimeManager/_RealtimeManager.scss
@@ -16,7 +16,10 @@
 			--stroke-color: white;
 			--font-size: 1rem;
 			font-size: 1rem;
-			--shadow-color: yellow;
+			.heading .letter {
+				font-size: 1.75rem;
+			}
+			// --shadow-color: yellow;
 
 			// z-index: 1;
 			.background {
