--- a/client/src/components/layout/_View.scss
+++ b/client/src/components/layout/_View.scss
@@ -10,6 +10,10 @@
 	}
 }
 
+.view--responsive {
+	position: relative;
+}
+
 #root .view:not(*.view--responsive) {
 	background-color: var(--view-bg-color, unset);
 }
