--- a/client/src/components/PieChart/_PieChart.scss
+++ b/client/src/components/PieChart/_PieChart.scss
@@ -100,7 +100,7 @@
 				// opacity: 0;
 			}
 			path:nth-child(2) {
-				animation: connecting-top 1.5s infinite;
+				animation: connecting-top 1.5s 1 !important;
 				animation-delay: 0s;
 				animation-fill-mode: forwards;
 				animation-timing-function: linear;
@@ -120,7 +120,7 @@
 				opacity: 0.2;
 			}
 			path:nth-child(3) {
-				animation: connecting-bottom-right 1.5s infinite;
+				animation: connecting-bottom-right 1.5s 1 !important;
 				animation-delay: 0s;
 				animation-fill-mode: forwards;
 				animation-timing-function: linear;
@@ -140,7 +140,7 @@
 				opacity: 0.2;
 			}
 			path:nth-child(4) {
-				animation: connecting-bottom-left 1.5s infinite;
+				animation: connecting-bottom-left 1.5s 1 !important;
 				animation-delay: 0s;
 				animation-fill-mode: forwards;
 				animation-timing-function: linear;
@@ -159,7 +159,7 @@
 				opacity: 0.2;
 			}
 			path:nth-child(5) {
-				animation: connecting-bottom-left 1.5s infinite;
+				animation: connecting-bottom-left 1.5s 1 !important;
 				animation-delay: 0s;
 				animation-fill-mode: forwards;
 				animation-timing-function: linear;
@@ -178,7 +178,7 @@
 				opacity: 0.2;
 			}
 			path:nth-child(6) {
-				animation: connecting-bottom-left 1.5s infinite;
+				animation: connecting-bottom-left 1.5s 1 !important;
 				animation-delay: 0s;
 				animation-fill-mode: forwards;
 				animation-timing-function: linear;
