--- a/client/src/pages/ClientTypeSelect/_Entrance.scss
+++ b/client/src/pages/ClientTypeSelect/_Entrance.scss
@@ -12,3 +12,33 @@
 
 	height: 100%;
 }
+
+.tablet {
+	.realtime-entrance {
+		.PieChart {
+			svg {
+				width: auto;
+				margin: auto;
+				max-width: 450px;
+				max-height: 450px;
+			}
+		}
+	}
+}
+
+.tablet.portrait {
+	.realtime-entrance {
+		.PieChart {
+			svg {
+				width: auto;
+				margin: auto;
+				max-width: 450px;
+
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
+		}
+	}
+}
