swap React-Notifications for React Toastify due to the latter's superior animation and features

--- a/client/src/styles/_gradients.scss
+++ b/client/src/styles/_gradients.scss
@@ -17,6 +17,10 @@
 	);
 }
 
+.gradient-mix {
+	background: linear-gradient(75deg, var(--secondary), var(--primary));
+}
+
 // #root .weiss-logo--gradient {
 // 	&.has-before:before,
 // 	&:not(*.has-before) {
