--- a/client/src/components/RealtimeManager/_RealtimeManager.scss
+++ b/client/src/components/RealtimeManager/_RealtimeManager.scss
@@ -211,7 +211,72 @@
 	}
 }
 
-#root .notification__item--success {
-	background-color: var(--secondary);
-	border-left: 8px solid var(--secondary-darker-1);
+#root {
+	.notification__item--success {
+		background-color: var(--secondary);
+		border-left: 8px solid var(--secondary-darker-1);
+	}
+	.notification__item--default {
+		background-color: var(--secondary);
+		border-left: 8px solid var(--secondary-darker-2);
+	}
 }
+
+.notification {
+	.notification__title {
+		font-size: 1.5rem;
+		font-family: inherit;
+	}
+
+	.notification__message {
+		font-size: 1.1rem;
+	}
+}
+
+.feedback--content {
+	width: 100%;
+	color: var(--white);
+	display: grid;
+	padding: calc(1 * var(--spacing));
+
+	.headingText {
+		grid-area: heading;
+		font-size: 1.75rem;
+	}
+	.bodyText {
+		grid-area: body;
+		font-size: 1rem;
+	}
+	.icon {
+		grid-area: icon;
+	}
+
+	// Creating 6 rows and 3rd row expands as much as it can
+	// /	grid-template-rows: 1fr auto;
+
+	// grid-template-areas:
+	// 	"icon heading"
+	// 	"icon body";
+
+	&.thumb-up {
+	}
+
+	grid-template-rows: auto 1fr;
+
+	// Defining the template (4 columns)
+	grid-template-areas:
+		"icon heading"
+		"icon body";
+}
+
+// .feedback--content {
+// 	width: 100%;
+// 	color: var(--white);
+// 	padding: calc(1 * var(--spacing));
+
+// 	display: grid;
+// 	grid-template-columns: repeat(12, 1fr);
+// 	column-gap: var(--spacing);
+
+// 	align-items: center;
+// }
