--- a/client/src/styles/_gradients.scss
+++ b/client/src/styles/_gradients.scss
@@ -22,6 +22,33 @@
 	background: linear-gradient(75deg, var(--secondary), var(--primary));
 }
 
+#root .gradient-text {
+	background: -webkit-linear-gradient(
+		var(--startColor, var(--white)),
+		var(--stopColor, orange)
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+
+	// animation: progress 0.25s infinite;
+	animation-delay: 0s;
+	animation-fill-mode: forwards;
+
+	@keyframes progress {
+		0% {
+			background-position: 100% 1%;
+		}
+
+		40% {
+			background-position: 0% 50%;
+		}
+
+		100% {
+			background-position: -100% 1%;
+		}
+	}
+}
+
 // #root .weiss-logo--gradient {
 // 	&.has-before:before,
 // 	&:not(*.has-before) {
