start adding (back) bgImages

--- a/client/src/pages/LogoScreen/LogoScreen.scss
+++ b/client/src/pages/LogoScreen/LogoScreen.scss
@@ -98,8 +98,9 @@
     transition: all 0.5s ease-in-out;
     transform: scale(1);
     color: var(--white);
-    padding: calc(1 * var(--spacing)) calc(4 * var(--spacing));
+    padding: calc(1 * var(--spacing)) calc(8 * var(--spacing));
     border-radius: 1.5rem;
+    font-size: 1.25rem;
   }
 }
 
