--- a/client/src/components/VideoPlayer/_VideoPlayer.scss
+++ b/client/src/components/VideoPlayer/_VideoPlayer.scss
@@ -5,9 +5,9 @@
 	transition: all 0.3s;
 	padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
 
-	// video {
-	// 	height: auto !important;
-	// }
+	video {
+		height: auto !important;
+	}
 	&.debugging {
 		pointer-events: all !important;
 		transform: none !important;
