--- a/client/src/components/Slider/Slider.styles.scss
+++ b/client/src/components/Slider/Slider.styles.scss
@@ -3,7 +3,7 @@
 		ul:last-of-type:not(.list) {
 			height: calc(100% - calc(var(--spacing) * 18));
 			overflow-y: auto;
-			right: var(--spacing) !important;
+			right: calc(0.5 * var(--spacing)) !important;
 		}
 	}
 	span.slide-side-nav-button-number {
