add bg images to slides that disappear on video load and re-appear before slide change

--- a/client/src/styles/foundations.css
+++ b/client/src/styles/foundations.css
@@ -165,6 +165,12 @@ body {
 	width: 100%;
 	/*overflow: auto;*/
 	overflow: hidden; /*for easy page transitions*/
+	/*
+	background: linear-gradient(
+		to left,
+		var(--color-canvas),
+		var(--color-white)
+	);*/
 }
 
 * {
