--- a/client/src/components/Slider/Slider.styles.scss
+++ b/client/src/components/Slider/Slider.styles.scss
@@ -10,3 +10,8 @@
 		width: 20px;
 	}
 }
+
+.slide-button-container {
+	margin-right: calc(var(--spacing) * 10);
+	margin-left: calc(var(--spacing) * 10);
+}
