--- a/client/src/components/Slider/Slider.styles.scss
+++ b/client/src/components/Slider/Slider.styles.scss
@@ -9,6 +9,12 @@
 	span.slide-side-nav-button-number {
 		width: 20px;
 	}
+
+	// .Page-container {
+	// 	// margin: var(--spacing);
+	// 	// margin-bottom: calc(-1 * var(--spacing));
+	// 	height: calc(100% - 2 * var(--spacing));
+	// }
 }
 
 .slide-button-container {
