--- a/client/src/components/Slider/Slider.styles.scss
+++ b/client/src/components/Slider/Slider.styles.scss
@@ -1,13 +1,17 @@
 .rm-hero-slider {
-	*:not(.Text) {
-		ul:last-of-type:not(.list) {
-			height: calc(100% - calc(var(--spacing) * 18));
-			overflow-y: auto;
-			right: var(--spacing) !important;
-		}
-	}
+	// *:not(.Text) {
+	// 	ul:last-of-type:not(.list) {
+	// 		height: calc(100% - calc(var(--spacing) * 18));
+	// 		overflow-y: auto;
+	// 		right: var(--spacing) !important;
+	// 	}
+	// }
 	span.slide-side-nav-button-number {
 		width: 20px;
+	}
+
+	li.slide-nav-button {
+		margin: 0 var(--spacing);
 	}
 
 	// .Page-container {
