--- a/client/src/styles/quiz.scss
+++ b/client/src/styles/quiz.scss
@@ -3,11 +3,13 @@
 }
 
 #root .quiz {
-	height: 100%;
+	// height: 100%;
+	margin: 0;
+	height: calc(100% - var(--spacing) * 8);
 	width: 100%;
 	max-width: 1000px;
 	padding: 0;
-	margin: auto;
+
 	display: flex;
 	justify-content: center; //x-axis (left and right)
 	align-content: space-between; // y-axis (up and down)
@@ -15,11 +17,12 @@
 	justify-items: flex-end;
 	overflow: hidden;
 
-	background: linear-gradient(
-		360deg,
-		var(--color-canvas),
-		var(--color-white)
-	);
+	//looks awesome
+	// background: linear-gradient(
+	// 	360deg,
+	// 	var(--color-canvas),
+	// 	var(--color-white)
+	// );
 
 	.progress-bar {
 		z-index: 1000;
@@ -212,8 +215,9 @@
 	}
 }
 
-#root .quiz-summary--page .quiz-summary {
-	height: calc(100% - 12 * var(--spacing));
+#root .quiz-summary--page .quiz-summary,
+#root .quiz-entrance--page .quiz-entrance {
+	height: calc(100% - 10 * var(--spacing));
 	display: flex;
 	flex-flow: column;
 
