--- a/client/src/components/Quiz/quiz.module.scss
+++ b/client/src/components/Quiz/quiz.module.scss
@@ -169,9 +169,10 @@
 
 			&:last-of-type {
 				// background-color: var(--white);
-				display: block !important;
 
-				font-size: calc(1.2 * var(--instruction--font-size));
+				//font-size: 1.5rem;
+
+				// font-size: calc(1.2 * var(--instruction--font-size));
 
 				font-weight: bolder;
 
