--- a/client/src/components/Quiz/quiz.module.scss
+++ b/client/src/components/Quiz/quiz.module.scss
@@ -12,6 +12,11 @@
 	vertical-align: middle;
 }
 
+.recordBtn {
+	width: 5rem;
+	height: 5rem;
+}
+
 .letter {
 	overflow: hidden;
 	font-size: inherit;
@@ -784,7 +789,8 @@
 	width: 100%;
 	height: 7.5%;
 	display: flex;
-	padding: 16px 32px;
+	//padding: 16px 32px;
+	padding: calc(var(--spacing) * 2) calc(var(--spacing) * 6);
 }
 
 .progressBar {
