--- a/client/src/components/layout/_View.scss
+++ b/client/src/components/layout/_View.scss
@@ -15,6 +15,8 @@
 	overflow: hidden;
 	display: flex;
 	height: 100%;
+
+	background: linear-gradient(to left, var(--canvas), var(--white));
 }
 
 #root .view:not(*.view--responsive) {
