--- a/client/src/styles/quiz.scss
+++ b/client/src/styles/quiz.scss
@@ -241,6 +241,10 @@
 
 	.btn-primary {
 		margin-bottom: 0;
+		max-width: 800px;
+		/* margin: auto; */
+		transform: translateX(-50%);
+		left: 50%;
 	}
 }
 
