change classroom selection look and feel to flat glass

--- a/client/src/pages/ClassroomSelect/CLassroomSelect.scss
+++ b/client/src/pages/ClassroomSelect/CLassroomSelect.scss
@@ -3,6 +3,14 @@
 		max-width: 550px;
 		margin: auto;
 	}
+
+	.carousel {
+		border: 4px solid var(--canvas);
+		&.selected {
+			border: 4px solid var(--primary);
+		}
+	}
+
 	.heading .letter {
 		font-size: 1.75rem;
 	}
